--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ nav ul li a:hover{
     color: #aaaaaa;
     width: 80%;
     border: 1px solid white;
-    margin-top: 30px;
+    margin-top: 60px;
     padding: 2rem;
     border-radius: 30px;
 
@@ -318,4 +318,67 @@ footer{
     padding: 5px;
     border-radius: 5px;
     z-index: 1000;
+}
+
+
+
+
+
+
+
+
+
+/* responsive */
+
+@media (max-width:850px) {
+    .sidebar{
+        width:90% !important;
+        margin-top: 50px;
+    }
+    .content{
+    }
+
+    .content-side{
+        position:static !important;
+        max-width:350px !important;
+        margin: auto !important;
+       
+    }
+    .main {
+        display: grid;
+        grid-template-columns: 100%;
+    }
+    .big-text{
+        font-size: 3rem !important;
+    }
+    nav{
+        position: fixed !important;
+        top:0 !important;
+        left: 0 !important;
+        z-index: 10 !important;
+        width: 100% !important;
+        border-radius: 0px !important;
+    }
+    .containerSkills {
+        display: flex;
+        flex-wrap: wrap;
+        width:100% !important;
+        margin-top: 50px; /
+    }
+    .skillbox{
+        width: 80px !important;
+    }
+    .skillbox i{
+        padding: 10px !important;
+    }
+    form{
+        justify-content: center !important;
+        align-items: center ;
+    }
+    footer{
+        padding:5px !important;
+    }
+   
+   
+   
 }
