--- a/style.css
+++ b/style.css
@@ -335,8 +335,9 @@ footer{
         width:90% !important;
         margin-top: 50px;
     }
-    .content{
-    }
+    /* .content{
+
+    } */
 
     .content-side{
         position:static !important;
